<resources>
    <string name="app_name">Book Your Booth</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="fullname">Fullname</string>
    <string name="email">Email</string>
    <string name="loginhere">Already have an account?</string>
    <string name="signuphere">Create new account</string>
    <string name="setting">Setting</string>
    <string name="string_setting">Setting</string>
    <string name="read">Read</string>
    <string name="bookyourbooth">BookYourBooth</string>
    <string name="logout">Logout</string>
    <string name="edit">Edit</string>
    <string name="nav_open">Open Navigation Drawer</string>
    <string name="nav_close">Close Navigation Drawer</string>
    <string name="accept">Accept</string>
    <string name="warn1"><b><u>general?</u></b></string>
    <string name="warn2"><b><u>premium?</u></b></string>
    <string name="select_booth">Select Booth</string>
    <string name="select">Select</string>
    <string name="title_bill"><b>Book Your Booth</b></string>
    <string name="event">Event</string>
    <string name="zone">Zone</string>
    <string name="booth">Booth</string>
    <string name="goSignup"><i><u>Create new account</u></i></string>
    <string name="goLogin"><i><u>Already have an account?</u></i></string>
    <string name="dateAndTime">Date&amp;Time :</string>
    <string name="title_activity_show_info">ShowInfoActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
</resources>