<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="20dp"
    android:layout_marginBottom="0dp"
    app:cardElevation="5dp"
    app:cardUseCompatPadding="true"
    app:cardPreventCornerOverlap="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        >

        <TextView
            android:id="@+id/event_history"
            android:layout_width="136dp"
            android:layout_height="26dp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="10dp"
            android:textSize="20dp"
            android:text="@string/event"
            android:fontFamily="@font/poppinsbold"
             />

        <TextView
            android:layout_width="50dp"
            android:layout_height="26dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="130dp"
            android:text="ZONE :"
            android:fontFamily="@font/poppinsbold"
            />

        <TextView
            android:id="@+id/zone_history"
            android:layout_width="30dp"
            android:layout_height="26dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="178dp"
            android:text="@string/zone"
            android:fontFamily="@font/poppinsmedium"
            />

        <TextView
            android:layout_width="60dp"
            android:layout_height="26dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="230dp"
            android:text="BOOTH :"
            android:fontFamily="@font/poppinsbold"
            />

        <TextView
            android:id="@+id/booth_history"
            android:layout_width="138dp"
            android:layout_height="22dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="292dp"
            android:text="@string/booth"
            android:fontFamily="@font/poppinsmedium"
             />

        <TextView
            android:layout_width="107dp"
            android:layout_height="50dp"
            android:text="@string/dateAndTime"
            android:layout_marginTop="60dp"
            android:layout_marginLeft="10dp"
            android:fontFamily="@font/poppinsbold"
            />

        <TextView
            android:id="@+id/time_history"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:text="time"
            android:layout_marginTop="60dp"
            android:layout_marginLeft="130dp"
            />

    </RelativeLayout>

</androidx.cardview.widget.CardView>