<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1"
    tools:context=".LoginActivity"
    android:focusable="true"
    android:focusableInTouchMode="true">


    <ScrollView
        android:id="@+id/sv"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            >

            <RelativeLayout
                android:id="@+id/im"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/cv"
                android:layout_alignRight="@id/cv"
                android:layout_marginLeft="120dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="9dp"
                android:elevation="10dp">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@drawable/icon_log">

                </ImageView>

            </RelativeLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="100dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:layout_marginTop="30dp"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        app:boxBackgroundColor="@android:color/transparent"
                        android:hint="@string/username"
                        app:boxStrokeColor="@color/purple_500"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        >

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/username"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableRight="@drawable/ic_user"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        app:boxBackgroundColor="@android:color/transparent"
                        android:hint="@string/password"
                        app:boxStrokeColor="@color/purple_500"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        >

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/password"
                            android:layout_width="match_parent"
                            android:inputType="textPassword"
                            android:layout_height="wrap_content"
                            android:drawableRight="@drawable/ic_password"/>

                    </com.google.android.material.textfield.TextInputLayout>

<!--                    <TextView-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:layout_margin="10dp"-->
<!--                        android:fontFamily="@font/poppinsbold"-->
<!--                        android:text="Username"-->
<!--                        android:textColor="#964ec2"-->
<!--                        android:textSize="14sp"-->
<!--                        android:textStyle="bold" />-->

<!--                    <EditText-->
<!--                        android:id="@+id/username"-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:layout_margin="10dp"-->
<!--                        android:layout_marginLeft="10dp"-->
<!--                        android:layout_marginRight="10dp"-->
<!--                        android:backgroundTint="#964ec2"-->
<!--                        android:drawableRight="@drawable/ic_user"-->
<!--                        android:fontFamily="@font/poppinsbold"-->
<!--                        android:inputType="text" />-->

<!--                    <TextView-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:layout_margin="10dp"-->
<!--                        android:fontFamily="@font/poppinsbold"-->
<!--                        android:text="Password"-->
<!--                        android:textColor="#964ec2"-->
<!--                        android:textSize="14sp"-->
<!--                        android:textStyle="bold" />-->

<!--                    <EditText-->
<!--                        android:id="@+id/password"-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:layout_margin="10dp"-->
<!--                        android:layout_marginLeft="10dp"-->
<!--                        android:layout_marginRight="10dp"-->
<!--                        android:backgroundTint="#964ec2"-->
<!--                        android:drawableRight="@drawable/ic_password"-->
<!--                        android:fontFamily="@font/poppinsbold"-->
<!--                        android:inputType="textPassword" />-->

                    <CheckBox
                        android:id="@+id/checkBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="Remember me." />

                </LinearLayout>



            </androidx.cardview.widget.CardView>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/cv"
                android:layout_alignRight="@id/cv"
                android:layout_alignLeft="@id/cv"
                android:elevation="10dp"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp"
                android:layout_marginTop="20dp">
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/buttonLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Login"
                    android:textColor="@color/white"
                    android:fontFamily="@font/poppinsbold"
                    android:background="@drawable/log_ui"
                    android:textAllCaps="false" />
            </RelativeLayout>
            <TextView
                android:id="@+id/signUpText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/cv"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="90dp"
                android:elevation="5dp"
                android:textSize="15sp"
                android:textColor="@color/white"
                android:fontFamily="@font/poppinsmedium"
                android:text="@string/goSignup"/>

        </RelativeLayout>
    </ScrollView>

<!--    <ProgressBar-->
<!--        android:id="@+id/progress"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:visibility="gone"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutPassword" />-->


</RelativeLayout>